画像ファイル差し替え

--- a/test.html
+++ b/test.html
@@ -247,7 +247,7 @@
   <main>
     <div class="slider-x">
       <div>
-        <img class="slide-image" src="./images/slides/01.jpg" alt="">
+        <img class="slide-image" src="./images/slides/01_edited.jpg" alt="">
       </div>
       <div>
         <img class="slide-image" src="./images/slides/02.jpg" alt="">
