3番目の画像をコメントアウト、画像3枚差し替え

--- a/test.html
+++ b/test.html
@@ -252,9 +252,9 @@
       <div>
         <img class="slide-image" src="./images/slides/02.jpg" alt="">
       </div>
-      <div>
+      <!--div>
         <img class="slide-image" src="./images/slides/03.jpg" alt="">
-      </div>
+      </div-->
       <div>
         <img class="slide-image" src="./images/slides/04.jpg" alt="">
         <span class="inview"></span>
